[package]
name = "z-queue"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "queue_bench"
harness = false

[features]
default = []

std = []

map = ["dep:scc"]

parking = ["event-listener/parking"]

rand = ["dep:rand"]
fastrand = ["dep:fastrand"]

wal = ["std"]

[dependencies]
parking_lot = "0.12"
arrayvec = { version = "0.7", default-features = false }
event-listener = { version = "5.4", default-features = false, features = ["std"] }
crossbeam-utils = { version = "0.8", default-features = false }
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }

scc = { version = "3.6", optional = true }

foldhash = { version = "0.2", default-features = false }

rand = { version = "0.10", optional = true }
fastrand = { version = "2.3", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
tokio = { version = "1", features = ["full"] }
flume = "0.12"
crossbeam-channel = "0.5"
