[package]
name = "z-queue"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "queue_bench"
harness = false

[features]
default = ["crossbeam-queue"]

# TODO: Remove std deps
std = []

crossbeam-queue = ["dep:crossbeam-queue"]
segmented-array = ["dep:arrayvec"]
map = ["dep:scc", "dep:arc-swap", "dep:foldhash"]

parking = ["event-listener/parking"]

rand = ["dep:rand"]
fastrand = ["dep:fastrand"]

triomphe = ["dep:triomphe"]

[dependencies]
parking_lot = "0.12"
event-listener = { version = "5.4", default-features = false, features = ["std"] }
crossbeam-utils = { version = "0.8", default-features = false }

# Crossbeam Queue
crossbeam-queue = { version = "0.3", optional = true, default-features = false, features = ["alloc"] }

# Segmented Array
arrayvec = { version = "0.7", optional = true, default-features = false }

# Map
scc = { version = "3.6", optional = true }
arc-swap = { version = "1.8", optional = true }
foldhash = { version = "0.2", optional = true, default-features = false }

# Triomphe
triomphe = { version = "0.1", optional = true }

rand = { version = "0.10", optional = true }
fastrand = { version = "2.3", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
tokio = { version = "1", features = ["full"] }
flume = "0.12"
crossbeam-channel = "0.5"
