[package]
name = "z-queue"
version = "0.1.0"
edition = "2024"
authors = ["Zac McChesney"]

[[bench]]
name = "queue"
harness = false

[[bench]]
name = "recv_stream"
harness = false

[features]
default = ["crossbeam-queue", "std", "thin-vec"]

# TODO: Remove std deps
std = ["crossbeam-utils/std", "z-sync/std"]

stream = ["dep:futures-util", "dep:ouroboros"]

crossbeam-queue = ["dep:crossbeam-queue"]
segmented-array = ["dep:arrayvec"]
map = ["dep:scc", "dep:arc-swap", "dep:foldhash"]

rand = ["dep:rand"]
fastrand = ["dep:fastrand"]

triomphe = ["dep:triomphe"]
thin-vec = ["z-sync/thin-vec"]

[dependencies]
z-sync = { git = "https://github.com/imzacm/z-sync.git", rev = "197951fd4abca00ebcb7fcd8a9a6cdab90010cc6", default-features = false }

crossbeam-utils = { version = "0.8", default-features = false }

# Stream
futures-util = { version = "0.3", optional = true }
ouroboros = { version = "0.18", optional = true }

# Crossbeam Queue
crossbeam-queue = { version = "0.3", optional = true, default-features = false, features = ["alloc"] }

# Segmented Array
arrayvec = { version = "0.7", optional = true, default-features = false }

# Map
scc = { version = "3.6", optional = true }
arc-swap = { version = "1.9", optional = true }
foldhash = { version = "0.2", optional = true, default-features = false }

# Triomphe
triomphe = { version = "0.1", optional = true, features = ["arc-swap"] }

rand = { version = "0.10", optional = true }
fastrand = { version = "2.3", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
tokio = { version = "1", features = ["full"] }
flume = "0.12"
crossbeam-channel = "0.5"
